--- a/style.css
+++ b/style.css
@@ -1,13 +1,9 @@
-body{
-    width: 100vh;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
-    margin-left: 400px;
+h1{
+    font-family: Verdana, sans-serif;
 }
-
 .Game{
     width: 100%;
+    margin-top: 1%;
     display: flex;
     justify-content: center;
     align-items: center;
